force-app/main/default/objects/Item_Snapshot__c/Item_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Item Snapshot</label>
    <nameField>
        <label>Item Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>