force-app/main/default/objects/Item_Snapshot__c/fields/Error_Condition_Formula__c.field-meta.xml
<CustomField>
    <fullName>Error_Condition_Formula__c</fullName>
    <label>Error Condition Formula</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>