force-app/main/default/objects/Item_Snapshot__c/fields/Evaluation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Criteria__c</fullName>
    <label>Evaluation Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>