force-app/main/default/objects/Item_Snapshot__c/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>