force-app/main/default/objects/Item_Snapshot__c/fields/Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>