force-app/main/default/objects/Item_Snapshot__c/fields/Filter_or_Formula__c.field-meta.xml
<CustomField>
    <fullName>Filter_or_Formula__c</fullName>
    <label>Filter or Formula</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Filter</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>