force-app/main/default/objects/Item_Snapshot__c/fields/Item_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Full_Name__c</fullName>
    <label>Item Full Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>