force-app/main/default/objects/Item_Snapshot__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Used for the sObject</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>