force-app/main/default/objects/Item_Snapshot__c/fields/Number_of_Custom_Fields__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Custom_Fields__c</fullName>
    <label>Number of Custom Fields</label>
    <summaryFilterItems>
        <field>Item_Snapshot_Field__c.Field_Api_Name__c</field>
        <operation>contains</operation>
        <value>__c</value>
    </summaryFilterItems>
    <summaryForeignKey>Item_Snapshot_Field__c.Item_Snapshot__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>