force-app/main/default/objects/Item_Snapshot__c/fields/Rule_Criteria_Formula__c.field-meta.xml
<CustomField>
    <fullName>Rule_Criteria_Formula__c</fullName>
    <label>Rule Criteria Formula</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>