force-app/main/default/objects/Item_Snapshot__c/fields/System_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>System_Snapshot__c</fullName>
    <label>System Snapshot</label>
    <referenceTo>System_Snapshot__c</referenceTo>
    <relationshipLabel>Item Snapshots</relationshipLabel>
    <relationshipName>Item_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>