force-app/main/default/objects/Item_Snapshot__c/fields/Workflow_Action_Name_Type__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Action_Name_Type__c</fullName>
    <label>Workflow Action Name - Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>